--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,19 @@
 server:
-  port: 8000
+  error:
+    include-message: always
+    include-binding-errors: always
+  port: ${PORT}
+
+spring:
+  datasource:
+    username: ${USERNAME}
+    password: ${PASSWORD}
+    url: jdbc:postgresql://${HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
