--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,15 +5,25 @@ server:
   port: ${PORT}
 
 spring:
+  h2:
+    console:
+      enabled: true
+      path: /h2
+
   datasource:
     username: ${USERNAME}
     password: ${PASSWORD}
-    url: jdbc:postgresql://${HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+    url: jdbc:h2:mem:${DATABASE_NAME}
+#    url: jdbc:postgresql://${HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+    driver-class-name: org.h2.Driver
+
   jpa:
+    open-in-view: off
     show-sql: true
     hibernate:
       ddl-auto: create-drop
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        #dialect: org.hibernate.dialect.PostgreSQLDialect
+        dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
